null checkejä database.javaan ja interface FirebaseManageriin

--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -6,184 +6,176 @@
     android:layout_height="match_parent"
     tools:context=".SettingsActivity">
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="match_parent"
+    <TableLayout
+        android:id="@+id/databaseStatsView"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:padding="16dp"
+        android:visibility="visible"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
-
-        <TableLayout
-            android:id="@+id/databaseStatsView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
-            android:visibility="visible"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/editDBID">
+        app:layout_constraintTop_toBottomOf="@+id/editDBID">
 
 
-            <TableRow
-                android:layout_width="match_parent"
-                android:layout_height="match_parent">
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
 
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:fontFamily="@font/josefin_sans"
-                    android:text="@string/games"
-                    android:textSize="20sp" />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/josefin_sans"
+                android:text="@string/games"
+                android:textSize="20sp" />
 
-                <TextView
-                    android:id="@+id/settings_gamesTV"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="8dp"
+            <TextView
+                android:id="@+id/settings_gamesTV"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="8dp"
 
-                    android:fontFamily="@font/josefin_sans"
-                    android:textSize="20sp" />
-            </TableRow>
-
-
-            <TableRow
-                android:layout_width="match_parent"
-                android:layout_height="match_parent">
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:fontFamily="@font/josefin_sans"
-                    android:text="@string/players"
-                    android:textSize="20sp" />
-
-                <TextView
-                    android:id="@+id/settings_playersTV"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="8dp"
-                    android:fontFamily="@font/josefin_sans"
-
-                    android:textSize="20sp" />
-            </TableRow>
-
-            <TableRow
-                android:layout_width="match_parent"
-                android:layout_height="match_parent">
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:fontFamily="@font/josefin_sans"
-                    android:text="@string/tosses"
-                    android:textSize="20sp" />
-
-                <TextView
-                    android:id="@+id/settings_tossesTV"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="8dp"
-                    android:fontFamily="@font/josefin_sans"
-                    android:text=""
-                    android:textSize="20sp" />
-            </TableRow>
-
-            <TableRow
-                android:layout_width="match_parent"
-                android:layout_height="match_parent">
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:fontFamily="@font/josefin_sans"
-                    android:text="@string/created"
-                    android:textSize="20sp" />
-
-                <TextView
-                    android:id="@+id/settings_createdTV"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="8dp"
-                    android:fontFamily="@font/josefin_sans"
-                    android:textSize="20sp" />
-            </TableRow>
+                android:fontFamily="@font/josefin_sans"
+                android:textSize="20sp" />
+        </TableRow>
 
 
-            <TableRow
-                android:layout_width="match_parent"
-                android:layout_height="match_parent">
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
 
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:fontFamily="@font/josefin_sans"
-                    android:text="@string/updated"
-                    android:textSize="20sp" />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/josefin_sans"
+                android:text="@string/players"
+                android:textSize="20sp" />
 
-                <TextView
-                    android:id="@+id/settings_updatedTV"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="8dp"
-                    android:fontFamily="@font/josefin_sans"
-                    android:text=""
-                    android:textSize="20sp" />
-            </TableRow>
+            <TextView
+                android:id="@+id/settings_playersTV"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="8dp"
+                android:fontFamily="@font/josefin_sans"
+
+                android:textSize="20sp" />
+        </TableRow>
+
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/josefin_sans"
+                android:text="@string/tosses"
+                android:textSize="20sp" />
+
+            <TextView
+                android:id="@+id/settings_tossesTV"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="8dp"
+                android:fontFamily="@font/josefin_sans"
+                android:text=""
+                android:textSize="20sp" />
+        </TableRow>
+
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/josefin_sans"
+                android:text="@string/created"
+                android:textSize="20sp" />
+
+            <TextView
+                android:id="@+id/settings_createdTV"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="8dp"
+                android:fontFamily="@font/josefin_sans"
+                android:textSize="20sp" />
+        </TableRow>
 
 
-        </TableLayout>
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
 
-        <androidx.appcompat.widget.SwitchCompat
-            android:id="@+id/imageSwitch"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:padding="16dp"
-            android:text="@string/show_images"
-            app:layout_constraintEnd_toEndOf="@+id/allowSpectatorsSwitch"
-            app:layout_constraintStart_toStartOf="@+id/allowSpectatorsSwitch"
-            app:layout_constraintTop_toTopOf="parent" />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/josefin_sans"
+                android:text="@string/updated"
+                android:textSize="20sp" />
 
-        <androidx.appcompat.widget.SwitchCompat
-            android:id="@+id/allowSpectatorsSwitch"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
-            android:padding="16dp"
-            android:text="@string/allow_spectators"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/imageSwitch" />
+            <TextView
+                android:id="@+id/settings_updatedTV"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="8dp"
+                android:fontFamily="@font/josefin_sans"
+                android:text=""
+                android:textSize="20sp" />
+        </TableRow>
 
-        <EditText
-            android:id="@+id/editDBID"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:ems="6"
-            android:gravity="center"
-            android:imeOptions="actionDone"
-            android:inputType="textVisiblePassword|textNoSuggestions"
-            android:maxLength="6"
-            android:textColor="@color/black"
-            android:textSize="24sp"
-            app:layout_constraintEnd_toEndOf="@+id/allowSpectatorsSwitch"
-            app:layout_constraintStart_toStartOf="@+id/allowSpectatorsSwitch"
-            app:layout_constraintTop_toBottomOf="@+id/allowSpectatorsSwitch" />
 
-        <ImageButton
-            android:id="@+id/infoButton"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:layout_marginStart="8dp"
-            android:background="@android:color/transparent"
-            android:padding="8dp"
-            android:scaleType="fitCenter"
-            app:layout_constraintBottom_toBottomOf="@+id/editDBID"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/editDBID"
-            app:layout_constraintTop_toBottomOf="@+id/allowSpectatorsSwitch"
-            app:srcCompat="@drawable/info_button" />
+    </TableLayout>
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
+    <androidx.appcompat.widget.SwitchCompat
+        android:id="@+id/imageSwitch"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="32dp"
+        android:padding="16dp"
+        android:text="@string/show_images"
+        app:layout_constraintEnd_toEndOf="@+id/allowSpectatorsSwitch"
+        app:layout_constraintStart_toStartOf="@+id/allowSpectatorsSwitch"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <androidx.appcompat.widget.SwitchCompat
+        android:id="@+id/allowSpectatorsSwitch"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:padding="16dp"
+        android:text="@string/allow_spectators"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imageSwitch" />
+
+    <EditText
+        android:id="@+id/editDBID"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:ems="6"
+        android:gravity="center"
+        android:imeOptions="actionDone"
+        android:inputType="textVisiblePassword|textNoSuggestions"
+        android:maxLength="6"
+        android:textColor="@color/black"
+        android:textSize="24sp"
+        app:layout_constraintEnd_toEndOf="@+id/allowSpectatorsSwitch"
+        app:layout_constraintStart_toStartOf="@+id/allowSpectatorsSwitch"
+        app:layout_constraintTop_toBottomOf="@+id/allowSpectatorsSwitch" />
+
+    <ImageButton
+        android:id="@+id/infoButton"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginEnd="32dp"
+        android:background="@android:color/transparent"
+        android:padding="8dp"
+        android:scaleType="fitCenter"
+        app:layout_constraintBottom_toBottomOf="@+id/editDBID"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/editDBID"
+        app:layout_constraintTop_toTopOf="@+id/editDBID"
+        app:srcCompat="@drawable/info_button" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
