--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -32,7 +32,7 @@
                 android:id="@+id/settings_gamesTV"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="8dp"
+                android:layout_marginStart="8dp"
 
                 android:fontFamily="@font/josefin_sans"
                 android:textSize="20sp" />
