--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -40,6 +40,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginBottom="8dp"
+            android:checked="true"
             android:fontFamily="@font/josefin_sans"
             android:text="@string/random"
             android:textColor="@color/black"
