Games sorting fix

--- a/app/src/main/res/layout/title_bar.xml
+++ b/app/src/main/res/layout/title_bar.xml
@@ -88,7 +88,7 @@
                 app:srcCompat="@drawable/camera"
                 app:strokeColor="@color/black"
                 app:strokeWidth="1dp"
-                tools:visibility="visible" />
+                tools:visibility="gone" />
         </androidx.constraintlayout.widget.ConstraintLayout>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
