--- a/app/src/main/res/layout/title_bar.xml
+++ b/app/src/main/res/layout/title_bar.xml
@@ -13,6 +13,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/light_gray"
+        app:layout_constraintHeight_min="100dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
@@ -53,7 +54,6 @@
             android:id="@+id/constraintLayout4"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/nextIB"
             app:layout_constraintStart_toEndOf="@+id/previousIB"
@@ -64,8 +64,6 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/josefin_sans"
-                android:paddingTop="8dp"
-                android:paddingBottom="8dp"
                 android:textColor="@color/black"
                 android:textSize="24sp"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -78,6 +76,7 @@
                 android:id="@+id/titleBar_playerImageView"
                 android:layout_width="75dp"
                 android:layout_height="75dp"
+                android:layout_marginTop="16dp"
                 android:background="@color/white"
                 android:padding="2dp"
                 android:scaleType="center"
