--- a/app/src/main/res/layout/activity_player_stats.xml
+++ b/app/src/main/res/layout/activity_player_stats.xml
@@ -221,6 +221,26 @@
                         android:text=""
                         android:textSize="20sp" />
                 </TableRow>
+                <TableRow
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:fontFamily="@font/josefin_sans"
+                        android:text="@string/winning_chances"
+                        android:textSize="20sp" />
+
+                    <TextView
+                        android:id="@+id/stats_winningChancesTV"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="8dp"
+                        android:fontFamily="@font/josefin_sans"
+                        android:text=""
+                        android:textSize="20sp" />
+                </TableRow>
 
 
             </TableLayout>
