--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -5,20 +5,24 @@
     <item
         android:id="@+id/new_game"
         android:title="@string/new_game"
-        app:showAsAction="never" />
+        />
     <item
         android:id="@+id/stats"
         android:title="@string/stats"
-        app:showAsAction="never" />
+        android:icon="@drawable/show_chart"
+        />
     <item
-        android:id="@+id/saved_games" app:showAsAction="never" android:title="@string/saved_games">
+        android:id="@+id/saved_games"
+        app:showAsAction="never"
+        android:title="@string/saved_games">
     </item>
     <item
         android:id="@+id/settings"
         android:title="@string/settings"
-        app:showAsAction="never"/>
+        android:icon="@drawable/settings"
+        />
     <item
         android:id="@+id/rules"
         android:title="@string/rules"
-        app:showAsAction="never"/>
+        />
 </menu>
