--- a/app/src/main/res/layout/activity_saved_games.xml
+++ b/app/src/main/res/layout/activity_saved_games.xml
@@ -16,6 +16,7 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginStart="1dp"
+        android:layout_marginTop="16dp"
         android:layout_marginEnd="1dp"
         android:layout_marginBottom="8dp"
         app:layout_constraintBottom_toTopOf="@+id/showAllButton"
