--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -75,14 +75,14 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@drawable/select_button" />
+            app:srcCompat="@drawable/select_button"
+            android:contentDescription="@string/select_players" />
 
         <EditText
             android:id="@+id/editTextPlayerName"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginEnd="8dp"
-            android:layout_marginRight="8dp"
             android:autofillHints="AUTOFILL_HINT_PERSON_NAME"
             android:background="@drawable/white_background"
             android:ems="10"
@@ -94,6 +94,7 @@
             android:textColor="@color/black"
             android:textColorHint="@color/black"
             android:textSize="24sp"
+            android:maxLength="20"
             app:layout_constraintEnd_toStartOf="@+id/addButton"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -103,7 +104,6 @@
             android:layout_width="wrap_content"
             android:layout_height="0dp"
             android:layout_marginEnd="8dp"
-            android:layout_marginRight="8dp"
             android:adjustViewBounds="true"
             android:background="@drawable/add_button_background"
             android:padding="10dp"
@@ -111,7 +111,8 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/selectButton"
             app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@drawable/add_button" />
+            app:srcCompat="@drawable/add_button"
+            android:contentDescription="@string/add" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
